--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@babel/runtime": "^7.23.1",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.4.3",
@@ -40,21 +39,18 @@
     "jszip": "^3.10.1",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-dnd": "^14.0.2",
-    "react-dnd-html5-backend": "^14.0.0",
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.2",
     "react-popper": "^2.2.5",
-    "react-redux": "7.2.4",
+    "react-redux": "^7.2.9",
     "react-scripts": "4.0.3",
     "redux": "4.1.0",
     "seedrandom": "^2.4.4",
-    "three": "0.101.1"
+    "three": "^0.101.1"
   },
   "devDependencies": {
-    "@babel/core": "7.14.3",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-runtime": "^7.22.15",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@testing-library/react-hooks": "^7.0.2",
